Add modify diary entry endpoint